syntax and markup changes, fixed a few typos as well. WIP

--- a/doc-Monitoring_Alerts_and_Reporting/report_menus.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/report_menus.adoc
@@ -3,20 +3,20 @@
 = Report Menus
 
 By default, all account roles have the same reports available.
-If you have the super administrator or administrator role, you can customize the accordions, the folders within them, and the locations of your reports. 
+If you have the super administrator or administrator role, you can customize the accordions, the folders within them, and the locations of your reports.
 
 NOTE: When you create your own report, the report is not automatically available.
-You must add it to a report menu. 
+You must add it to a report menu.
 
-The report menu is a hierarchical structure that consists of the following components: 
+The report menu is a hierarchical structure that consists of the following components:
 
-* The #Top Level# under which the accordions are shown.
-  (#Top Level# is only displayed when you are in the report menu editor.)  					
+* The top level, under which the accordions are shown.
+  (Top level is only displayed when you are in the report menu editor.)
 * Accordions that are general categories for the reports.
-  The defaults supplied are #Configuration Management#, #Migration Readiness, Operations#, #VM Sprawl#, #Relationships#, and #Events#.
+  The defaults supplied are *Configuration Management*, *Migration Readiness*, *Operations*, *VM Sprawl*, *Relationships*, and *Events*.
 * Folders that are used to further organize reports within an accordion.
-  For example, under the #Configuration Management#, you would see folders for virtual machines, hosts, and other virtual infrastructure components. 
-* Reports that are stored directly in the folders. 
+  For example, under the *Configuration Management*, there are folders for virtual machines, hosts, and other virtual infrastructure components. 
+* Reports that are stored directly in the folders.
 
 :leveloffset: 3
 include::topics/To_manage_Report_Menu_Accordions.adoc[]
@@ -28,5 +28,3 @@ include::topics/To_manage_Report_Menu_Folders.adoc[]
 
 :leveloffset: 3
 include::topics/To_organize_reports_in_Report_Menus.adoc[]
-
-
