--- a/doc-Monitoring_Alerts_and_Reporting/topics/Changing_Report_Views.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Changing_Report_Views.adoc
@@ -2,13 +2,14 @@
 
 Some reports can be viewed as charts as well as lists.
 Note that this will depend on the type of data and on how the report has been created.
-Where applicable, you will see these additional buttons. 
+Where applicable, you will see these additional buttons.
 
-.Procedure: To Change the View of a Report
-. Navigate to menu:Cloud Intelligence[Reports]. 
+To change the view of a report:
+
+. Navigate to menu:Cloud Intelligence[Reports].
 . Click the report to view.
-  Click one of the following buttons for the view you want. 
+  Click one of the following buttons for the view you want.
 +
-* Click  image:images/2284.png[]for Graph View. 
-* Click  image:images/2285.png[]for Hybrid View. 
-* Click  image:images/2022.png[]for Tabular View. 
+* Click  image:images/2284.png[]for Graph View.
+* Click  image:images/2285.png[]for Hybrid View.
+* Click  image:images/2022.png[]for Tabular View.
