--- a/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
@@ -1,15 +1,14 @@
 = Downloading a Report
 
-Download reports to analyze the data using other tools or to print the report. 
+Download reports to analyze the data using other tools or to print the report. To download a report:
 
-.Procedure: To Download Reports
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the report you want to view. 
+. Navigate to menu:Cloud Intelligence[Reports].
+. Click the report you want to view.
 . Click on the row for the instance of the report you want to download.
-  If the report needs to be generated, see <<_sect_running_reports,sect-Running Reports>>. 
-. Click on the report download buttons for the type of export you want. 
+  If the report needs to be generated, see <<_sect_running_reports,sect-Running Reports>>.
+. Click on the report download buttons for the type of export you want.
 +
-* Click  image:images/2132.png[] btn:[(Download this report in text format)] to download as text. 
-* Click  image:images/2133.png[] btn:[(Download this report in csv format)] to download as a comma separated file. 
-* Click  image:images/2134.png[] btn:[(Download this report in PDF format)] to download as PDF. 
-* The report is automatically named with the type of report and date. 
+* Click  image:images/2132.png[] *(Download this report in text format)* to download as text.
+* Click  image:images/2133.png[] *(Download this report in csv format)* to download as a comma-separated file.
+* Click  image:images/2134.png[] *(Download this report in PDF format)* to download as PDF.
+* The report is automatically named with the type of report and date.
