--- a/doc-Monitoring_Alerts_and_Reporting/Usage.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/Usage.adoc
@@ -2,15 +2,14 @@
 = Usage
 
 Usage provides a targeted view of CPU, RAM, disk space, disk I/O, and network I/O for tagged virtual machines.
-This allows you to find which virtual machines are using or overusing resources. 
+This allows you to find which virtual machines are using or overusing resources.
 
-There are two requirements to use this feature: 
+There are two requirements to use this feature:
 
 * You must assign tags to the virtual machines that you want to collect usage data for.
-  See "Tagging Virtual Machines and Templates" in Managing Infrastructure and Inventory. 
+  See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/managing-infrastructure-and-inventory/#to_tag_virtual_machines_and_templates[Tagging Virtual Machines and Templates] in *Managing Infrastructure and Inventory*.
 * Capacity and utilization collection must be enabled.
-  For more information on configuring capacity and utilization charts, see the Deployment Planning Guide. 
+  For more information on configuring capacity and utilization charts, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#Capacity_Planning[Deployment Planning Guide].
 
 :leveloffset: 2
 include::topics/To_access_Usage_data.adoc[]
-
