--- a/doc-Monitoring_Alerts_and_Reporting/topics/Copying_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Copying_a_report.adoc
@@ -1,14 +1,13 @@
 = Copying a Report
 
 Use this feature to copy a report that is similar to one that you want to create.
-Then, you only need to make minor edits instead of creating an entirely new report. 
+By copying a report, you only need to make minor edits instead of creating an entirely new report.
 
-
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the #Reports# accordion and select the report that you want to copy. 
-. Click  image:images/1847.png[] (#Configuration#), then click  image:images/1859.png[] (#Copy this report#). 
-. On the Columns tab, edit the #Basic Report Info# area to include a new #Menu Name#.
-  Each #Menu Name# must be unique. 
+. Navigate to menu:Cloud Intelligence[Reports].
+. Click the *Reports* accordion and select the report that you want to copy.
+. Click  image:images/1847.png[] (*Configuration*), then click  image:images/1859.png[] (*Copy this report*).
+. On the Columns tab, edit the *Basic Report Info* area to include a new *Menu Name*.
+  Each *Menu Name* must be unique.
 . Make any other changes you need.
-  See <<_adding_a_report,Adding a Report>> for details on the changes you can make. 
-. Click btn:[Add]. 
+  See <<_adding_a_report,Adding a Report>> for details on the changes you can make.
+. Click *Add*. 
