--- a/doc-Monitoring_Alerts_and_Reporting/topics/Deleting_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Deleting_a_Report.adoc
@@ -2,14 +2,15 @@
 
 Delete reports when you find that they are no longer useful.
 Only administrators and super administrators of CloudForms Management Engine can add, copy, edit, and delete reports.
-Note that only customer created reports can be deleted. 
+Note that only customer-created reports can be deleted.
 
-.Procedure: To Delete a Report
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the #Reports# accordion and select the report you want to delete. 
-. Click  image:images/1847.png[] (#Configuration#),  image:images/1861.png[] (#Delete this Report from the Database#). 
+To delete a report:
+
+. Navigate to menu:Cloud Intelligence[Reports].
+. Click the *Reports* accordion and select the report you want to delete.
+. Click  image:images/1847.png[] (*Configuration*),  image:images/1861.png[] (*Delete this Report from the Database*).
 +
-NOTE: The #Delete this report from the Database# option will only appear on reports you have created.
-Default reports cannot be deleted. 
+NOTE: The *Delete this report from the Database* option will only appear on reports you have created.
+Default reports cannot be deleted.
 
-. Click btn:[OK]. 
+. Click *OK*.
