--- a/doc-Monitoring_Alerts_and_Reporting/viewing_reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/viewing_reports.adoc
@@ -2,12 +2,12 @@
 [[_sect_viewing_reports]]
 = Viewing Reports
 
-Once you have created a schedule for a report, you can view it at any time after the first scheduled time has occurred. 
+Once you have created a schedule for a report, you can view it at any time after the first scheduled time has occurred.
 
 .Procedure: To View a Report
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the #Saved Reports# accordion or the #Reports# accordion. 
-. Click on the instance of the report you want to view. 
+. Navigate to menu:Cloud Intelligence[Reports].
+. Click the *Saved Reports* accordion or the *Reports* accordion.
+. Click on the instance of the report you want to view.
 
 :leveloffset: 3
 include::topics/Changing_Report_Views.adoc[]
@@ -23,5 +23,3 @@ include::topics/Downloading_a_Report.adoc[]
 
 :leveloffset: 3
 include::topics/Showing_a_Report_in_Full_Screen.adoc[]
-
-
