--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -110,7 +110,7 @@ In the previous version of CloudForms Management Engine, the Automate Server Rol
 
 Watermark reports::
 
-CloudForms Management Engine can now report a high watermark for the maximum number of virtual machines on a provider over a one-month period, which can be used for billing. Reports can be queued to collect watermark information for host sockets per provider and for virtual machines per provider. The *Watermark Host Sockets per Provider* and *Watermark VMs per Provider* reports are located in the *Reports* menu under menu:Configuration Management[Providers].
+CloudForms Management Engine can now report a high watermark for the maximum number of virtual machines on a provider over a one-month period, which can be used for billing. Reports can be queued to collect watermark information for host sockets per provider and for virtual machines per provider. To access the *Watermark Host Sockets per Provider* and *Watermark VMs per Provider* reports, navigate to menu:Cloud Intelligence[Reports > Configuration Management > Providers].
 +
 The reports are grouped by month with the values (host sockets or virtual machines per provider) consolidated on the maximum amount for that period. When creating a watermark report, Red Hat recommends copying an existing report measuring the “monthly” and “watermark” requirements, for example:
 +
