syntax and markup fixes

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
@@ -46,7 +46,7 @@ In a scenario where 2.5 GHz is used in a day with the chargeback rate set at $0.
 
 == Storage Allocated Cost
 
-The Storage Allocated Cost is defined as the Allocated Disk Storage in Bytes over the selected rate interval (hour, day, week, month).
+The Storage Allocated Cost is defined as the Allocated Disk Storage in bytes over the selected rate interval (hour, day, week, month).
 
 .Storage Allocated Cost
 ======
@@ -58,7 +58,7 @@ In a scenario where 500 GB are used in a day with the chargeback rate set at $0.
 
 == Storage Total Cost
 
-The Storage Total Cost is defined as the Used Disk Storage in Bytes over the selected rate interval (hour, day, week, month).
+The Storage Total Cost is defined as the Used Disk Storage in bytes over the selected rate interval (hour, day, week, month).
 
 .Storage Total Cost
 ======
@@ -70,7 +70,7 @@ In a scenario where 250 GB are used in a day with the chargeback rate set at $0.
 
 == Storage Used Cost
 
-The Storage Used Cost is defined as the Used Disk Storage in Bytes over the selected rate interval (hour, day, week, month).
+The Storage Used Cost is defined as the Used Disk Storage in bytes over the selected rate interval (hour, day, week, month).
 
 .Storage Used Cost
 ======
