--- a/doc-Monitoring_Alerts_and_Reporting/topics/Importing_and_Exporting_Policies_Policy_Profiles_and_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Importing_and_Exporting_Policies_Policy_Profiles_and_Alerts.adoc
@@ -1,13 +1,12 @@
 = Importing and Exporting Policies, Policy Profiles, and Alerts
 
 If you have multiple VMDBs, you can export policies, policy profiles, or alerts from one to another.
-You can export and import for use with other CloudForms Management Engine infrastructures. 
+You can export and import for use with other CloudForms Management Engine infrastructures.
 
-.Procedure: To Import a Policy, Policy Profile, or an Alert
-. Copy the file to import to a location that is accessible to your CloudForms Management Engine Console. 
-. Navigate to menu:Control[Import/Export]. 
-. Click btn:[Browse] to navigate to the location of the file. 
-. Select the file, and then click btn:[Open] from the file selection box. 
-. Click btn:[Upload]. 
-. Verify that these are the policies or policy profiles that you want to import. 
-. Click btn:[Commit]. 
+. Copy the file to import to a location that is accessible to your CloudForms Management Engine Console.
+. Navigate to menu:Control[Import/Export].
+. Click *Browse* to navigate to the location of the file.
+. Select the file, and then click *Open* from the file selection box. 
+. Click *Upload*.
+. Verify that these are the policies or policy profiles that you want to import.
+. Click *Commit*.
