--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_access_Usage_data.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_access_Usage_data.adoc
@@ -1,17 +1,14 @@
 [[_to_access_usage_data]]
 = Accessing Usage Data
 
-
-
-.Procedure: To Access Usage Data
-. Navigate to menu:Cloud Intelligence[Usage]. 
-. In the #Options# area, select a #Date#.
-  More choices will display. 
+. Navigate to menu:Cloud Intelligence[Usage].
+. In the *Options* area, select a *Date*.
+  More choices will display.
 +
 
 image::images/2307.png[]
 
 
-* From #Period#, select either #Day# or #Hour#. If you select #Hour#, you will be prompted for which hour in UTC time. 
-* From #Category#, select the category for the tag. 
-. * From #Entry#, select the tag from within the category that you want usage data for. 
+* From *Period*, select either *Day* or *Hour*. If you select *Hour*, you will be prompted for which hour in UTC time.
+* From *Category*, select the category for the tag.
+. * From *Entry*, select the tag from within the category that you want usage data for. 
