--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_an_Alert_Profile.adoc
@@ -1,13 +1,12 @@
 [[_to_assign_an_alert_profile]]
 = Assigning an Alert Profile
 
-After an alert profile is created and verified, you can assign it directly to a resource. 
+After an alert profile is created and verified, you can assign it directly to a resource.
 
-.Procedure: To Assign an Alert Profile
-. Navigate to menu:Control[Explorer]. 
-. Click on the #Alert Profiles# accordion, then click on the alert profile that you want to assign. 
-. Click  image:images/1847.png[] (#Configuration#),  image:images/1993.png[] (#Edit Assignments for this Alert Profile#). 
+. Navigate to menu:Control[Explorer].
+. Click on the *Alert Profiles* accordion, then click on the alert profile that you want to assign.
+. Click  image:images/1847.png[] (*Configuration*),  image:images/1993.png[] (*Edit Assignments for this Alert Profile*).
 . The options presented change based on if the alert is for a cluster, datastore, CloudForms Management Engine server, host, or virtual machine and instance.
   You can assign to the enterprise, to specific hosts, cluster, resource pools, and providers, or based on assign tags.
-  For a CloudForms Management Engine server alert profile, you can only assign to CloudForms Management Engine servers in the current Region. 
-. Click btn:[Save]. 
+  For a CloudForms Management Engine server alert profile, you can only assign to CloudForms Management Engine servers in the current Region.
+. Click *Save*. 
