--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_an_Alert.adoc
@@ -1,11 +1,10 @@
 [[_to_copy_an_alert]]
 = Copying an Alert
 
-You can copy an existing alert to create a new alert that is similar to the existing one, then change the values associated with it. 
+You can copy an existing alert to create a new alert that is similar to the existing one, then change the values associated with it.
 
-.Procedure: To Copy an Alert
-. Navigate to menu:Control[Explorer]. 
-. Click on the #Alert# accordion, then click on the alert that you want to copy. 
-. Click  image:images/1847.png[] (#Configuration#),  image:images/1859.png[] (#Copy this Alert#). Click btn:[OK] to confirm. 
-. Make the required changes. 
-. Click btn:[Add]. 
+. Navigate to menu:Control[Explorer].
+. Click on the *Alert* accordion, then click on the alert that you want to copy.
+. Click  image:images/1847.png[] (*Configuration*),  image:images/1859.png[] (*Copy this Alert*). Click *OK* to confirm.
+. Make the required changes.
+. Click *Add*. 
