--- a/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Downloading_a_Report.adoc
@@ -1,11 +1,11 @@
 = Downloading a Report
 
-Download reports to analyze the data using other tools or to print the report. To download a report:
+Download reports to analyze the data using other tools or to print the report.
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the report you want to view.
 . Click on the row for the instance of the report you want to download.
-  If the report needs to be generated, see <<_sect_running_reports,sect-Running Reports>>.
+  If the report needs to be generated, see <<_sect_running_reports>>.
 . Click on the report download buttons for the type of export you want.
 +
 * Click  image:images/2132.png[] *(Download this report in text format)* to download as text.
