--- a/doc-Monitoring_Alerts_and_Reporting/topics/Exporting_a_Widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Exporting_a_Widget.adoc
@@ -1,9 +1,8 @@
 = Exporting a Widget
 
-You can share widgets between appliances using the export and import features. 
+You can share widgets between appliances using the export and import features.
 
-.Procedure: To Export a Widget
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. In the #Import/Export# accordion, click #Widgets#. 
-. In the #Export# area, select the widgets that you want to export. 
-. Click btn:[Export]. 
+. Navigate to menu:Cloud Intelligence[Reports].
+. In the *Import/Export* accordion, click *Widgets*.
+. In the *Export* area, select the widgets that you want to export.
+. Click *Export*. 
