--- a/doc-Monitoring_Alerts_and_Reporting/topics/Importing_a_Widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Importing_a_Widget.adoc
@@ -1,9 +1,8 @@
 = Importing a Widget
 
-You can share widgets between appliances using the export and import features. 
+You can share widgets between appliances using the export and import features.
 
-.Procedure: To Import a Widget
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. In the #Import/Export# accordion, click #Widgets#. 
-. In the #Import# area, click btn:[Browse] to select an import file. 
-. Click btn:[Upload]. 
+. Navigate to menu:Cloud Intelligence[Reports].
+. In the *Import/Export* accordion, click *Widgets*.
+. In the *Import* area, click *Browse* to select an import file.
+. Click *Upload*. 
