syntax and markup updates

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hardware_Reconfigure_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hardware_Reconfigure_Alert.adoc
@@ -1,22 +1,21 @@
 [[_to_create_a_hardware_reconfigure_alert]]
 = Creating a Hardware Reconfigured Alert
 
-Use a hardware reconfigure alert to detect changes to the amount of memory or the number of CPUs on a virtual machine. 
+Use a hardware reconfigure alert to detect changes to the amount of memory or the number of CPUs on a virtual machine.
 
-.Procedure: To Create a Hardware Reconfigure Alert
-. Navigate to menu:Control[Explorer]. 
-. Click the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
-. In the #Info# area: 
+. Navigate to menu:Control[Explorer].
+. Click the *Alerts* accordion, then click  image:images/1847.png[] (*Configuration*),  image:images/1848.png[] (*Add a new Alert*).
+. In the *Info* area:
 +
-* Type in a description for the alert. 
-* From #Based On#, select #VM and Instance#. 
-* From #What to Evaluate#, select #Hardware Reconfigured#. 
-* In #Notification Frequency#, select how often you want to be notified if hardware reconfiguration is detected. 
+* Type in a description for the alert.
+* From *Based On*, select *VM and Instance*.
+* From *What to Evaluate*, select *Hardware Reconfigured*.
+* In *Notification Frequency*, select how often you want to be notified if hardware reconfiguration is detected.
 
-. From #Hardware Attribute#, select Number of CPUs. From the next dropdown, select #Decreased#.
+. From *Hardware Attribute*, select Number of CPUs. From the next dropdown, select *Decreased*.
 +
 image::images/1973.png[]
 
 . After setting the parameters, select what you want the alert to do.
-  You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process. 
-. Click btn:[Add]. 
+  You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process.
+. Click *Add*.
