--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Normal_Operating_Range_Alert.adoc
@@ -3,28 +3,26 @@
 
 Normal operating range alerts enables you to be notified when the normal operating range is exceeded, or falls below for a period of time from 1 minute to 2 hours.
 Capacity and utilization must be enabled for normal operating ranges to be calculated.
-See the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, for instructions.
+See the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration] guide for more information.
 
-.Procedure: To Create a Normal Operating Range Alert
-. Navigate to menu:Control[Explorer]. 
-. Click the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
-. In the #Info# area: 
+. Navigate to menu:Control[Explorer].
+. Click the *Alerts* accordion, then click  image:images/1847.png[] (*Configuration*),  image:images/1848.png[] (*Add a new Alert*).
+. In the *Info* area:
 +
-* Type in a #Description# for the alert. 
-* From #Based On#, select #VM and Instance#. 
-* For #What to Evaluate#, select #Normal Operating Range#. 
-* In #Notification Frequency#, select how often you want to be notified if the performance threshold is reached. 
+* Type in a *Description* for the alert.
+* From *Based On*, select *VM and Instance*.
+* For *What to Evaluate*, select *Normal Operating Range*.
+* In *Notification Frequency*, select how often you want to be notified if the performance threshold is reached.
 
-. Set the threshold in the #Normal Operating Range Parameters# area. 
+. Set the threshold in the *Normal Operating Range Parameters* area.
 +
 
 image::images/1976.png[]
 +
-* From #Performance Field#, select the field to check and whether you want to be notified if the field is exceeded or fell below. 
-* In #Field Meets Criteria for#, select the amount of time that the threshold requires to be met to trigger the alert. 
+* From *Performance Field*, select the field to check and whether you want to be notified if the field is exceeded or fell below.
+* In *Field Meets Criteria for*, select the amount of time that the threshold requires to be met to trigger the alert.
 
 . After setting the parameters, you then select what you want the alert to do.
   You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process.
-  See <<_to_create_an_alert,To create an Alert>>. 
-. Click btn:[Add].
-
+  See <<_to_create_an_alert>>.
+. Click *Add*.
