--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_a_widget.adoc
@@ -2,10 +2,8 @@
 = Editing a Widget
 
 
-
-.Procedure: To Edit a Widget
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the #Dashboard Widgets# accordion and select the widget you want to edit. 
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/1851.png[] btn:[(Edit this Widget)]. 
-. Make the required changes. 
-. Click btn:[Save]. 
+. Navigate to menu:Cloud Intelligence[Reports].
+. Click the *Dashboard Widgets* accordion and select the widget you want to edit.
+. Click  image:images/1847.png[] *(Configuration)*, and then  image:images/1851.png[] *(Edit this Widget)*.
+. Make the required changes.
+. Click *Save*. 
