--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_import_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_import_a_report.adoc
@@ -2,11 +2,10 @@
 = Importing a Report
 
 Reports are stored in the VMDB; however, you can share customized reports among VMDBs.
-To do this use the export and import feature of reports. 
+To do this use the export and import feature of reports.
 
-.Procedure: To Import a Report
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. In the #Import/Export# accordion, click #Custom Reports#. 
-. In the #Import# area, click btn:[Browse] to select an import file. 
-. To overwrite an existing report with the same menu name, select #Overwrite existing reports#. 
-. Click btn:[Upload] to import the report to the #Company-Custom# folder. 
+. Navigate to menu:Cloud Intelligence[Reports].
+. In the *Import/Export* accordion, click *Custom Reports*.
+. In the *Import* area, click *Browse* to select an import file. 
+. To overwrite an existing report with the same menu name, select *Overwrite existing reports*.
+. Click *Upload* to import the report to the *Company-Custom* folder.
