--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_minimize_or_maximize_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_minimize_or_maximize_a_widget.adoc
@@ -1,8 +1,5 @@
 [[_to_minimize_or_maximize_a_widget]]
 = Minimizing or Maximizing a Widget
 
-
-
-.Procedure: To Minimize or Maximize a Widget
-. Navigate to menu:Cloud Intelligence[Dashboard]. 
-. From the chart or report widget that you want to maximize, click  image:images/2263.png[] btn:[(Minimize)] or  image:images/2264.png[] btn:[(Maximize)] in the upper right corner of the widget. 
+. Navigate to menu:Cloud Intelligence[Dashboard].
+. From the chart or report widget that you want to maximize, click  image:images/2263.png[] *(Minimize)* or  image:images/2264.png[] *(Maximize)* in the upper right corner of the widget. 
