--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_modify_a_report_schedule.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_modify_a_report_schedule.adoc
@@ -1,9 +1,8 @@
 [[_to_modify_a_report_schedule]]
 = Modifying a Report Schedule
 
-.Procedure: To Modify a Report Schedule
-. Navigate to menu:Cloud Intelligence[Reports] 
-. Click the #Schedules# accordion and select the schedule you want to edit. 
-. Click  image:images/1847.png[] (#Configuration#), then click  image:images/1851.png[] (#Edit this Schedule#). 
-. Make the required changes. 
-. Click btn:[Save]. 
+. Navigate to menu:Cloud Intelligence[Reports]
+. Click the *Schedules* accordion and select the schedule you want to edit.
+. Click  image:images/1847.png[] (*Configuration*), then click  image:images/1851.png[] (*Edit this Schedule*).
+. Make the required changes.
+. Click *Save*. 
