--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_organize_reports_in_Report_Menus.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_organize_reports_in_Report_Menus.adoc
@@ -1,23 +1,22 @@
 [[_to_organize_reports_in_report_menus]]
 = Organizing Reports in Report Menus
 
-.Procedure: To Organize Reports in Report Menus
-. Log in to the console as a user who is assigned either the Super Administrator or Administrator Account Role. 
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the #Edit Report Menus# accordion. 
-. Click the role whose menus you want to customize. 
-. Expand the #Report# accordion and menus using the triangles to the left of the item name until you are able to select the subfolder where you want to put reports. 
-. Choose one of the following actions. 
+. Log in to the console as a user who is assigned either the Super Administrator or Administrator Account Role.
+. Navigate to menu:Cloud Intelligence[Reports].
+. Click the *Edit Report Menus* accordion.
+. Click the role whose menus you want to customize.
+. Expand the *Report* accordion and menus using the triangles to the left of the item name until you are able to select the subfolder where you want to put reports.
+. Choose one of the following actions:
 +
-* To add a report, select a report from the #Available Reports# area on the right and click  image:images/1876.png[] btn:[(Move selected reports left)]. 
-* To remove a report from a folder, select the report from the #Selected Reports# area and click  image:images/1878.png[] btn:[(Move selected reports right)]. 
-* To move a report to the top of the folder, select the report and click  image:images/2305.png[] btn:[(Move selected reports to top)]. 
-* To move a report up one place in the folder, select the report and click  image:images/2290.png[]btn:[(Move selected reports up)]. 
-* To move a report down one place in the folder, select the report and click  image:images/2289.png[] btn:[(Move selected reports down)]. 
-* To move a report to the bottom of the folder, select the report and click  image:images/2306.png[] btn:[(Move selected reports to bottom)]. 
+* To add a report, select a report from the *Available Reports* area on the right and click  image:images/1876.png[] *(Move selected reports left)*.
+* To remove a report from a folder, select the report from the *Selected Reports* area and click  image:images/1878.png[] *(Move selected reports right)*.
+* To move a report to the top of the folder, select the report and click  image:images/2305.png[] *(Move selected reports to top)*.
+* To move a report up one place in the folder, select the report and click  image:images/2290.png[] *(Move selected reports up)*.
+* To move a report down one place in the folder, select the report and click  image:images/2289.png[] *(Move selected reports down)*.
+* To move a report to the bottom of the folder, select the report and click  image:images/2306.png[] *(Move selected reports to bottom)*.
 
-. When you are finished making changes click  image:images/1863.png[] btn:[(Commit report management changes)]. 
-. Click btn:[Save]. 
+. When you are finished making changes click  image:images/1863.png[] *(Commit report management changes)*.
+. Click *Save*.
 
 The changes are made.
-The next time a user with this Account Role logs in, the new report and menu structure will be displayed. 
+The next time a user with this Account Role logs in, the new report and menu structure will be displayed.
