--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_VMware_Alarm_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_VMware_Alarm_Alert.adoc
@@ -2,23 +2,22 @@
 = Creating a VMware Alarm Alert
 
 CloudForms Management Engine can use VMware alarms as a trigger for an alert.
-This type of alert can be created for a cluster, host, or virtual machine. 
+This type of alert can be created for a cluster, host, or virtual machine.
 
-.Procedure: To Create a VMware Alarm Alert
-. Navigate to menu:Control[Explorer]. 
-. Click the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
-. In the #Info# area: 
+. Navigate to menu:Control[Explorer].
+. Click the *Alerts* accordion, then click  image:images/1847.png[] (*Configuration*),  image:images/1848.png[] (*Add a new Alert*).
+. In the *Info* area:
 +
-* Type in a description for the alert. 
-* From #Based On#, select #Cluster#, #Host#, or #VM#. 
-* For #What to Evaluate#, select #VMware Alarm#. 
-* In #Notification Frequency#, select how often you want to be notified if the log item is detected. 
+* Type in a description for the alert.
+* From *Based On*, select *Cluster*, *Host*, or *VM*.
+* For *What to Evaluate*, select *VMware Alarm*.
+* In *Notification Frequency*, select how often you want to be notified if the log item is detected.
 
-. In the #VMware Alarm Parameters# area select the provider and alarm. 
+. In the *VMware Alarm Parameters* area select the provider and alarm.
 +
 
 image::images/1984.png[]
 
 . After setting the parameters, you then select what you want the alert to do.
-  You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process. 
-. Click btn:[Add]. 
+  You can send an email, create an SNMP Trap, let the alert show on the timeline, or send a management event to start an automation process.
+. Click *Add*. 
