--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
@@ -2,118 +2,116 @@
 = Creating an Alert
 
 In this section, the basics of creating an Alert are described.
-Detailed instructions for the specific types of Alerts are given in the sections following. 
+Detailed instructions for the specific types of Alerts are given in the sections following.
 
 To send emails or SNMP traps from the CloudForms Management Engine server, you must have the [literal]+Notifier+ server role enabled and have set up SMTP email or SNMP traps.
 For further information, see the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
-.Procedure: To Create an Alert
-. Navigate to menu:Control[Explorer]. 
-. Click the #Alerts# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Alert#). 
+. Navigate to menu:Control[Explorer].
+. Click the *Alerts* accordion, then click  image:images/1847.png[] (*Configuration*),  image:images/1848.png[] (*Add a new Alert*).
 +
-* Type in a description for the alert. 
-* Check #Active# when you feel that the alert is ready to be enabled. 
-* From #Based On#, select the type of infrastructure item to base the alert on. 
-* The options shown in #What to Evaluate# change based on what you selected in #Based On#. 
-* In #Notification Frequency#, select how often you want to be notified if the event log threshold is reached. 
+* Type in a description for the alert.
+* Check *Active* when you feel that the alert is ready to be enabled.
+* From *Based On*, select the type of infrastructure item to base the alert on.
+* The options shown in *What to Evaluate* change based on what you selected in *Based On*.
+* In *Notification Frequency*, select how often you want to be notified if the event log threshold is reached.
 
-. The parameters available are based on the #What to Evaluate# selection.
-  See the following sections for additional details on each alert type. 
-. To send an email, check #Send an E-mail#.
-  Parameters required for sending an email are displayed. 
+. The parameters available are based on the *What to Evaluate* selection.
+  See the following sections for additional details on each alert type.
+. To send an email, check *Send an E-mail*.
+  Parameters required for sending an email are displayed.
 +
 
 image::images/1967.png[]
 +
-* In #From#, type in the sending email. 
-* Use #Add a CloudForms Management Engine User# to select a user.  The CloudForms Management Engine user must have a valid email address entered under accounts. 
-* Use #Add (enter manually)# to type in the address not registered to a CloudForms Management Engine user.
-  Then, click  image:images/1848.png[] (#Add#). 
+* In *From*, type in the sending email.
+* Use *Add a CloudForms Management Engine User* to select a user.  The CloudForms Management Engine user must have a valid email address entered under accounts.
+* Use *Add (enter manually)* to type in the address not registered to a CloudForms Management Engine user.
+  Then, click  image:images/1848.png[] (*Add*).
 
-. If you check #Send an SNMP Trap#, type in the IP for the host to send the trap to, select the version of SNMP that you are using, and type in the Trap Object ID.
-  Type in multiple hosts if you need the trap sent to multiple SNMP hosts. 
+. If you check *Send an SNMP Trap*, type in the IP for the host to send the trap to, select the version of SNMP that you are using, and type in the Trap Object ID.
+  Type in multiple hosts if you need the trap sent to multiple SNMP hosts.
 +
 * If using SNMP V1, you will be prompted for a Trap Number.
-  Type 1, 2, or 3, based on the appropriate suffix number from table below. 
+  Type 1, 2, or 3, based on the appropriate suffix number from table below.
 * If using SNMP V2, you will be prompted for a Trap Object ID.
-  Type info, warning, or critical, based on the table below. 
-* Trap Object ID and suffix number 
+  Type info, warning, or critical, based on the table below.
+* Trap Object ID and suffix number
 +
 [cols="1,1,1", frame="all", options="header"]
 |===
-| 
-										
+|
+
 											Object ID
-										
-									
-| 
-										
+
+
+|
+
 											Suffix Number Added to PEN
-										
-									
-| 
-										
+
+
+|
+
 											PEN with the Suffix Added
-										
-									
 
-| 
-										
+
+
+|
+
 											info
-										
-									
-| 
-										
+
+
+|
+
 											1
-										
-									
-| 
-										
+
+
+|
+
 											1.3.6.1.4.1.33482.1
-										
-									
 
-| 
-										
+
+
+|
+
 											warn, warning
-										
-									
-| 
-										
-											2
-										
-									
-| 
-										
-											1.3.6.1.4.1.33482.2
-										
-									
 
-| 
-										
+
+|
+
+											2
+
+
+|
+
+											1.3.6.1.4.1.33482.2
+
+
+
+|
+
 											crit, critical, error
-										
-									
-| 
-										
+
+
+|
+
 											3
-										
-									
-| 
-										
+
+
+|
+
 											1.3.6.1.4.1.33482.3
-										
-									
+
+
 |===
 +
 
 image::images/1966.png[]
 
 
-. To show the alert as an event on the CloudForms Management Engine timeline, check #Show on Timeline#.
-  It shows as part of the Alarm/Status Change/Errors category. 
-. To invoke automation, check #Send a Management Event#.
+. To show the alert as an event on the CloudForms Management Engine timeline, check *Show on Timeline*.
+  It shows as part of the Alarm/Status Change/Errors category.
+. To invoke automation, check *Send a Management Event*.
   Type in the name of the event.
-  This item exists in the #Process/Event Class#. 
-. Click btn:[Add].
-
+  This item exists in the *Process/Event Class*.
+. Click *Add*.
