--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_RSS_Feed_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_RSS_Feed_widget.adoc
@@ -1,38 +1,35 @@
 [[_to_create_an_rss_feed_widget]]
 = Creating an RSS Feed Widget
 
-
-
-.Procedure: To Create an RSS Feed Widget
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the #Dashboard Widgets# accordion, and click the #RSS Feeds# folder. 
-. Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a new Widget)]. 
-. In the #Basic Information# area, type in a #Title# and #Description#.
+. Navigate to menu:Cloud Intelligence[Reports].
+. Click the *Dashboard Widgets* accordion, and click the *RSS Feeds* folder.
+. Click  image:images/1847.png[] *Configuration)*, then click  image:images/1848.png[] *(Add a new Widget)*.
+. In the *Basic Information* area, type in a *Title* and *Description*.
   By default the widget will be active as soon as you create it.
-  To make it inactive, uncheck the #Active# box. 
-. In the #RSS Feed Options# area, you have the following choices. 
+  To make it inactive, uncheck the *Active* box.
+. In the *RSS Feed Options* area, you have the following choices:
 +
-* From #Type#, select #Internal# to use feed from CloudForms Management Engine.
-  Then select the RSS feed, from the #Internal RSS Feed# dropdown. 
-* From #Type#, select #External# to use a feed outside of CloudForms Management Engine.
-  Then, either select the RSS feed or type your own. 
-* From #Row Count#, select the number of rows you want returned from the RSS feed. 
+* From *Type*, select *Internal* to use feed from CloudForms Management Engine.
+  Then select the RSS feed, from the *Internal RSS Feed* dropdown.
+* From *Type*, select *External* to use a feed outside of CloudForms Management Engine.
+  Then, either select the RSS feed or type your own.
+* From *Row Count*, select the number of rows you want returned from the RSS feed.
 
-. Select the Filters until you are at the report you want for this widget.
+. Select the *Filters* until you are at the report you want for this widget.
   Select up to three columns from that report.
-  Finally, for Row Count, select the number of rows that you want displayed. 
-. In the #Timer# area, click the #Run# drop down to specify how often you want the widget data to get updated.
-  The options displayed will depend on which #Run# option you choose.
-  Select #Hourly, Daily#, #Weekly#, or #Monthly#. 
+  Finally, for *Row Count*, select the number of rows that you want displayed.
+. In the *Timer* area, click the *Run* drop down to specify how often you want the widget data to get updated.
+  The options displayed will depend on which *Run* option you choose.
+  Select *Hourly, Daily*, *Weekly*, or *Monthly*.
 +
 
 image::images/2272.png[]
 
-. Select a #Time Zone#.
-  Note that if you change the #Time Zone#, you will need to reset the starting date and time. 
-. Type or select a date to begin the schedule in #Starting Date#. 
-. Select a #Starting Time (UTC)# based on a 24 hour clock in the selected #Time Zone#. 
-. In the #Visibility# area, select #<To All Users>#, so that all users can use this widget no matter what user role they are assigned.
-  Select #<By Role># to assign this widget to specific user roles.
-  Select #<By Group># to assign this widget to specific groups. 
-. Click btn:[Add]. 
+. Select a *Time Zone*.
+  Note that if you change the *Time Zone*, you will need to reset the starting date and time.
+. Type or select a date to begin the schedule in *Starting Date*.
+. Select a *Starting Time (UTC)* based on a 24 hour clock in the selected *Time Zone*.
+. In the *Visibility* area, select *<To All Users>*, so that all users can use this widget no matter what user role they are assigned.
+  Select *<By Role>* to assign this widget to specific user roles.
+  Select *<By Group>* to assign this widget to specific groups.
+. Click *Add*.
