--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_delete_an_Alert_Profile.adoc
@@ -2,10 +2,9 @@
 = Deleting an Alert Profile
 
 Remove alert profiles that you no longer need.
-This does not remove the alerts associated with the alert profile. 
+This does not remove the alerts associated with the alert profile.
 
-.Procedure: To Delete an Alert Profile
-. Navigate to menu:Control[Explorer]. 
-. Click on the #Alert Profiles# accordion, then click the alert profile you want to remove. 
-. Click  image:images/1847.png[] (#Configuration#),  image:images/1861.png[] (#Delete this Alert Profile#). 
-. Click btn:[OK] to confirm. 
+. Navigate to menu:Control[Explorer].
+. Click on the *Alert Profiles* accordion, then click the alert profile you want to remove.
+. Click  image:images/1847.png[] (*Configuration*),  image:images/1861.png[] (*Delete this Alert Profile*).
+. Click *OK* to confirm. 
