--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_download_a_Timelines_data.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_download_a_Timelines_data.adoc
@@ -1,12 +1,11 @@
 [[_to_download_a_timelines_data]]
 = Downloading a Timeline's Data
 
-You can download timeline data for further analysis or printing. 
+You can download timeline data for further analysis or printing.
 
-.Procedure: To Download a Timeline's Data
-. Navigate to menu:Cloud Intelligence[Timelines], and click the timeline you want to download. 
-. Click on the download button for the format you want. 
+. Navigate to menu:Cloud Intelligence[Timelines], and click the timeline you want to download.
+. Click on the download button for the format you want.
 +
-* Click  image:images/2132.png[] btn:[(Download this Timeline data in text format)] to download as text. 
-* Click  image:images/2133.png[] btn:[(Download this Timeline data in csv format)] to download as a comma separated file. 
-* Click  image:images/2134.png[] btn:[(Download this Timeline data in PDF format)] to download as PDF. 
+* Click  image:images/2132.png[] *(Download this Timeline data in text format)* to download as text.
+* Click  image:images/2133.png[] *(Download this Timeline data in csv format)* to download as a comma separated file.
+* Click  image:images/2134.png[] *(Download this Timeline data in PDF format)* to download as PDF. 
