--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_edit_an_Alert_Profile.adoc
@@ -1,11 +1,10 @@
 [[_to_edit_an_alert_profile]]
 = Editing an Alert Profile
 
-You can edit an alert profile as your enterprise's need change. 
+You can edit an alert profile as your enterprise's needs change.
 
-.Procedure: To Edit an Alert Profile
-. Navigate to menu:Control[Explorer]. 
-. Click on the #Alert Profiles# accordion, then click the alert profile you want to edit. 
-. Click  image:images/1847.png[] (#Configuration#),  image:images/1851.png[] (#Edit this Alert Profile#). 
-. Make the required changes. 
-. Click btn:[Save]. 
+. Navigate to menu:Control[Explorer].
+. Click on the *Alert Profiles* accordion, then click the alert profile you want to edit.
+. Click  image:images/1847.png[] (*Configuration*),  image:images/1851.png[] (*Edit this Alert Profile*).
+. Make the required changes.
+. Click *Save*.
