--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_evaluate_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_evaluate_an_Alert.adoc
@@ -1,18 +1,17 @@
 [[_to_evaluate_an_alert]]
 = Evaluating an Alert
 
-.Procedure: To Evaluate an Alert
-. Navigate to menu:Control[Explorer]. 
-. Click the #Actions# accordion, then click  image:images/1847.png[] (#Configuration#),  image:images/1848.png[] (#Add a new Action#). 
-. Type in a #Description# for the action. 
+. Navigate to menu:Control[Explorer].
+. Click the *Actions* accordion, then click  image:images/1847.png[] (*Configuration*),  image:images/1848.png[] (*Add a new Action*).
+. Type in a *Description* for the action.
 +
 
 image::images/1911.png[]
 
-. Select #Evaluate Alerts# from #Action Type#. 
-. Select the alerts to be evaluated and click  image:images/1876.png[] (Move selected Alerts into this Action). Use the kbd:[Ctrl] key to select multiple alerts. 
+. Select *Evaluate Alerts* from *Action Type*.
+. Select the alerts to be evaluated and click  image:images/1876.png[] (*Move selected Alerts into this Action*). Use the `Ctrl` key to select multiple alerts.
 +
 
 image::images/1912.png[]
 
-. Click btn:[Add]. 
+. Click *Add*.
