--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_export_a_report.adoc
@@ -2,10 +2,9 @@
 = Exporting a Report
 
 Reports are stored in the VMDB; however, you can share customized reports among VMDBs.
-To do this use the export and import feature of reports. 
+To do this use the export and import feature of reports.
 
-.Procedure: To Export a Report
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. In the #Import/Export# accordion, click #Custom Reports#. 
-. In the #Export# area, select the reports to export. 
-. Click btn:[Export]. 
+. Navigate to menu:Cloud Intelligence[Reports].
+. In the *Import/Export* accordion, click *Custom Reports*.
+. In the *Export* area, select the reports to export.
+. Click *Export*.
