--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_run_a_scheduled_report_immediately.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_run_a_scheduled_report_immediately.adoc
@@ -1,7 +1,6 @@
 [[_to_run_a_scheduled_report_immediately]]
 = Running a Scheduled Report Immediately
 
-.Procedure: To Run a Scheduled Report Immediately
-. Navigate to menu:Cloud Intelligence[Reports]. 
-. Click the #Schedules# accordion and select the schedule you want to run. 
-. Click  image:images/1847.png[] (#Configuration#), then click  image:images/1847.png[] (#Queue#). 
+. Navigate to menu:Cloud Intelligence[Reports].
+. Click the *Schedules* accordion and select the schedule you want to run.
+. Click  image:images/1847.png[] (*Configuration*), then click  image:images/1847.png[] (*Queue*).
