a few syntax, markup, and wording fixes

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_copy_a_widget.adoc
@@ -3,6 +3,6 @@
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Dashboard Widget* accordion, and select the widget you want to copy.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/1859.png[] *(Copy this Widget)*. 
+. Click  image:images/1847.png[] *(Configuration)*, and then  image:images/1859.png[] *(Copy this Widget)*. 
 . Type a unique name for the widget and edit its properties.
 . Click *Save*.
