--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Menu_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Menu_widget.adoc
@@ -3,7 +3,7 @@
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Dashboard Widget* accordion and click the *Menus* folder.
-. Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] *(Add a new Widget)*.
+. Click  image:images/1847.png[] *[(Configuration)*, then click  image:images/1848.png[] *(Add a new Widget)*.
 . In the *Basic Information* area, type in a *Title* and *Description*.
   By default the widget will be active as soon as you create it.
   To make it inactive, uncheck the *Active* box.
