--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
@@ -32,7 +32,7 @@ image::images/2279.png[]
 * Click *Hourly* to run the analysis hourly.
   You will be prompted to select how many hours you want between each analysis.
 * Type or select a date to begin the schedule in *Starting Date*.
-* Select a *Starting Time* based on a 24 hour clock in the CloudForms Management Engine Appliance's Time Zone. 
+* Select a *Starting Time* based on a 24 hour clock in the CloudForms Management Engine Appliance's Time Zone.
 
 . To send an email that includes an attachment with the report contents, check *Send an E-mail*. Parameters required for sending an email are displayed.
 +
@@ -43,7 +43,7 @@ image::images/2281.png[]
 * Use *Add a User*, to select a specific user.
   The user must have a valid email address entered under accounts.
 * Use *Add (enter manually)* to type in the address not registered to a User.
-* Then, click  image:images/1848.png[] btn:[(Add)].
+* Then, click  image:images/1848.png[] *(Add)*.
 
 . If you are sending an email after the report runs, then you can select further options under Email Options.
 +
