--- a/doc-Monitoring_Alerts_and_Reporting/Reports.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/Reports.adoc
@@ -17,11 +17,11 @@ Each category has its own set of subfolders.
 * Use *Performance by Asset Type* to see a report on the performance of your virtual infrastructure.
   You must be capturing capacity and utilization data to get this information.
 * Use *Running Processes* to view the information on processes running on a virtual machine.
-  You must have domain credentials entered for the zone to collect the info for these reports, and the virtual machine must have been analyzed at least once. 
+  You must have domain credentials entered for the zone to collect the info for these reports, and the virtual machine must have been analyzed at least once.
 * *Trending* shows projections of datastore capacity and host CPU and memory use.
 * *Provisioning* shows provisioning activity based on the approver, datastore, requester, and virtual machine.
 
-For a complete list of Reportable Fields in CloudForms Management Engine, see xref:_appe_reportable_fields_in_cloudforms_management_engine[]
+For a complete list of reportable fields in CloudForms Management Engine, see xref:_appe_reportable_fields_in_cloudforms_management_engine[].
 
 :leveloffset: 2
 include::running_reports.adoc[]
