--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Report_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Report_widget.adoc
@@ -3,7 +3,7 @@
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click on the *Dashboard Widgets* accordion, then choose the *Reports* folder.
-. Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] *(Add a new Widget)*.
+. Click  image:images/1847.png[] *(Configuration)*, then click  image:images/1848.png[] *(Add a new Widget)*.
 . Click menu:Configuration[Add a new Widget].
 . In the *Basic Information* area, type in a *Title* and *Description*.
   By default the widget will be active as soon as you create it.
@@ -33,4 +33,4 @@ image::images/2267.png[]
 . In the *Visibility* area, select *<To All Users>*, so that all users can use this widget no matter what user role they are assigned.
   Select *<By Role>* to assign this widget to specific user roles.
   Select *<By Group>* to assign this widget to specific groups.
-. Click *Add*. 
+. Click *Add*.
