--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert.adoc
@@ -5,7 +5,7 @@ In this section, the basics of creating an Alert are described.
 Detailed instructions for the specific types of Alerts are given in the sections following.
 
 To send emails or SNMP traps from the CloudForms Management Engine server, you must have the [literal]+Notifier+ server role enabled and have set up SMTP email or SNMP traps.
-For further information, see the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
+For further information, see the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration] guide.
 
 . Navigate to menu:Control[Explorer].
 . Click the *Alerts* accordion, then click  image:images/1847.png[] (*Configuration*),  image:images/1848.png[] (*Add a new Alert*).
