--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert_Profile.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Alert_Profile.adoc
@@ -9,7 +9,7 @@ An alert profile can have as many alerts assigned as you need, and can be assign
 . Click  image:images/1847.png[] (*Configuration*),  image:images/1848.png[] (*Add a new Profile*).
 . In the *Basic Information* box, type in a unique *Description* for the alert profile.
 . Select the desired alerts from the *Available Datastore Alerts* area.
-  Use the kbd:[Ctrl] key to select multiple alerts.
+  Use the `Ctrl` key to select multiple alerts.
 . Click  image:images/1876.png[] to add the Alerts.
 . Type in any additional description in the *Notes* area.
-. Click *Add*. 
+. Click *Add*.
