edited sentences pointing to other guides so they say 'see' instead of 'see the'. Wording edits to hostd threshold log section

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Expression_Alerts.adoc
@@ -17,7 +17,7 @@ image::images/1985.png[]
 
 . Use the expression editor to create your expression.
   This is the same expression editor used to create conditions.
-  For details on how to use the expression editor, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/defining-policies-and-profiles/defining-policies-and-profiles[Defining Policies and Profiles] guide.
+  For details on how to use the expression editor, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/defining-policies-and-profiles/defining-policies-and-profiles[Defining Policies and Profiles].
 +
 image::images/1986.png[]
 +
