--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hostd_Log_Threshold_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Hostd_Log_Threshold_Alert.adoc
@@ -1,9 +1,9 @@
 [[_to_create_a_hostd_log_threshold_alert]]
 = Creating a hostd Log Threshold Alert
 
-Use hostd log threshold when you want to send a notification when certain items are found in the event logs for a host.
+Use the *hostd Log Threshold* to send a notification when certain items are found in the event logs for a host.
 A default analysis profile with event log items is required for this feature.
-In this example, we will check the Hosts log for a failure to validate a virtual machine's IP address.
+The following example shows steps to check the host's log for a failure to validate a virtual machine's IP address.
 
 . Navigate to menu:Control[Explorer].
 . Click the *Alert* accordion.
@@ -19,7 +19,7 @@ image::images/1981.png[]
 * In *Notification Frequency*, select how often you want to be notified if the log item is detected.
 
 . In the *Hostd Log Threshold Parameters* area, select the parameters for the event log message.
-  You can set a threshold for a filter, level, or message source. 
+  You can set a threshold for a filter, level, or message source.
 +
 
 image::images/1982.png[]
