--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Hourly_Performance_Alert.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_Hourly_Performance_Alert.adoc
@@ -3,7 +3,7 @@
 
 Hourly performance alerts enable you to be notified immediately when an hourly performance threshold has been met for a cluster.
 Capacity and Utilization must be enabled for performance thresholds to be detected.
-See the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration] guide for instructions.
+See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration] for instructions.
 
 . Navigate to menu:Control[Explorer].
 . Click the *Alerts* accordion.
