--- a/doc-Monitoring_Alerts_and_Reporting/Chargeback.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/Chargeback.adoc
@@ -3,7 +3,7 @@
 
 The chargeback feature allows you to calculate monetary virtual machine charges based on owner or company tag.
 To use this feature you must be collecting capacity and utilization data.
-For information on server control settings and capacity & utilization collection settings, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration] guide.
+For information on server control settings and capacity & utilization collection settings, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration] .
 
 :leveloffset: 2
 include::topics/Chargeback_Rates.adoc[]
