--- a/doc-Monitoring_Alerts_and_Reporting/Usage.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/Usage.adoc
@@ -9,7 +9,7 @@ There are two requirements to use this feature:
 * You must assign tags to the virtual machines that you want to collect usage data for.
   See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/managing-infrastructure-and-inventory/#to_tag_virtual_machines_and_templates[Tagging Virtual Machines and Templates] in *Managing Infrastructure and Inventory*.
 * Capacity and utilization collection must be enabled.
-  For more information on configuring capacity and utilization charts, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#Capacity_Planning[Capacity Planning] chapter in the *Deployment Planning Guide*.
+  For more information on configuring capacity and utilization charts, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#Capacity_Planning[Capacity Planning] in the *Deployment Planning Guide*.
 
 :leveloffset: 2
 include::topics/To_access_Usage_data.adoc[]
