--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_schedule_a_Report.adoc
@@ -12,7 +12,7 @@ image::images/2277.png[]
 +
 * In the *Basic Information* area, type in a *Name* and *Description* for the schedule.
 * By default. *Active* is checked to enable the scan.
-* Check *E-Mail after Running* to send an email after the report has been generated. The email will be sent to the users email address as show in the *Accounts* area in *Configuration*. The email will include a link to the report. See the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration] guide, to learn how to verify the address, and to validate outgoing email settings.
+* Check *E-Mail after Running* to send an email after the report has been generated. The email will be sent to the users email address as show in the *Accounts* area in *Configuration*. The email will include a link to the report. See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration] to learn how to verify the address, and to validate outgoing email settings.
 
 . The *Report Selection* area is pre-populated if you added the schedule directly from the report.
   If you are adding from the schedule according, use the *Filter* drop downs to select the report that you want to schedule.
