changes from gilab merge request QE - mostly marking up Notes, etc

--- a/doc-Monitoring_Alerts_and_Reporting/appe-Regular_Expressions.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/appe-Regular_Expressions.adoc
@@ -461,7 +461,7 @@ Note that if you want to search a file, you must collect it as part of a host an
 
 |
 
-							Find the line beginning with `sshd`. Then, using a colon `:`` as delimiter, check that the value four ":" over is equal to 99999.
+							Find the line beginning with `sshd`. Then, using a colon `:` as delimiter, check that the value four ":" over is equal to 99999.
 
 
 |
