--- a/doc-Monitoring_Alerts_and_Reporting/report_menus.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/report_menus.adoc
@@ -5,8 +5,11 @@
 By default, all account roles have the same reports available.
 If you have the super administrator or administrator role, you can customize the accordions, the folders within them, and the locations of your reports.
 
-NOTE: When you create your own report, the report is not automatically available.
+[NOTE]
+======
+When you create your own report, the report is not automatically available.
 You must add it to a report menu.
+======
 
 The report menu is a hierarchical structure that consists of the following components:
 
@@ -15,7 +18,7 @@ The report menu is a hierarchical structure that consists of the following compo
 * Accordions that are general categories for the reports.
   The defaults supplied are *Configuration Management*, *Migration Readiness*, *Operations*, *VM Sprawl*, *Relationships*, and *Events*.
 * Folders that are used to further organize reports within an accordion.
-  For example, under the *Configuration Management*, there are folders for virtual machines, hosts, and other virtual infrastructure components. 
+  For example, under the *Configuration Management*, there are folders for virtual machines, hosts, and other virtual infrastructure components.
 * Reports that are stored directly in the folders.
 
 :leveloffset: 3
