--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_access_Usage_data.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_access_Usage_data.adoc
@@ -11,4 +11,4 @@ image::images/2307.png[]
 
 * From *Period*, select either *Day* or *Hour*. If you select *Hour*, you will be prompted for which hour in UTC time.
 * From *Category*, select the category for the tag.
-. * From *Entry*, select the tag from within the category that you want usage data for. 
+* From *Entry*, select the tag from within the category that you want usage data for. 
