--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_access_and_use_a_Timeline.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_access_and_use_a_Timeline.adoc
@@ -3,8 +3,6 @@
 
 You can use timelines to view the history record for virtual machines.
 
-
-.Note
 [NOTE]
 ======
 Amazon does not provide events, so CloudForms Management Engine does not support timelines for virtual machines hosted by Amazon.
@@ -17,6 +15,7 @@ Amazon does not provide events, so CloudForms Management Engine does not support
 * Select *Events* to view timelines related to operations and changes in configuration.
 
 . Drag the relevant time band, such as hour, day, or month to go to the time you want to see.
-  Note that some timelines, such as *Events Operations: All Events*, use minutes, hours, and days instead going back only 30 days.
++
+NOTE: Some timelines, such as *Events Operations: All Events*, use minutes, hours, and days instead of going back only 30 days.
 . To see more detail for a resource in the timeline, click on it.
   A balloon appears with a clickable link to the resource.
