--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_add_a_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_add_a_widget.adoc
@@ -4,6 +4,10 @@
 You can add widgets to the dashboard to accommodate the information you want to see upon login.
 
 . Navigate to menu:Cloud Intelligence[Dashboard].
-. Click  image:images/2259.png[] *(Add a Widget)*. 
+. Click  image:images/2259.png[] *(Add a Widget)*.
 . Select the widget you want to add from the list.
-  Note that only widgets that are not currently showing on the dashboard will appear in this list.
+
+[NOTE]
+======
+Only widgets that are not currently showing on the dashboard will appear in this list.
+======
