--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Chart_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_Chart_widget.adoc
@@ -20,9 +20,10 @@ image::images/2269.png[]
 image::images/2270.png[]
 
 . Select a *Time Zone*.
-  Note that if you change the time zone, you will need to reset the starting date and time.
   Type or select a date to begin the schedule in *Starting Date*.
-  Select a *Starting Time (UTC)* based on a 24-hour clock in the selected time zone.
+  Select a *Starting Time* based on a 24 hour clock in the selected time zone.
++
+NOTE: If you change the time zone, you will need to reset the starting date and time.
 . In the *Visibility* area, select *<To All Users>*, so that all users can use this widget no matter what user role they are assigned.
   Select *<By Role>* to assign this widget to specific user roles.
   Select *<By Group>* to assign this widget to specific groups.
