--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_RSS_Feed_widget.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_an_RSS_Feed_widget.adoc
@@ -3,7 +3,7 @@
 
 . Navigate to menu:Cloud Intelligence[Reports].
 . Click the *Dashboard Widgets* accordion, and click the *RSS Feeds* folder.
-. Click  image:images/1847.png[] *Configuration)*, then click  image:images/1848.png[] *(Add a new Widget)*.
+. Click  image:images/1847.png[] *(Configuration)*, then click  image:images/1848.png[] *(Add a new Widget)*.
 . In the *Basic Information* area, type in a *Title* and *Description*.
   By default the widget will be active as soon as you create it.
   To make it inactive, uncheck the *Active* box.
@@ -26,7 +26,9 @@
 image::images/2272.png[]
 
 . Select a *Time Zone*.
-  Note that if you change the *Time Zone*, you will need to reset the starting date and time.
++
+NOTE: If you change the time zone, you will need to reset the starting date and time.
+
 . Type or select a date to begin the schedule in *Starting Date*.
 . Select a *Starting Time (UTC)* based on a 24 hour clock in the selected *Time Zone*.
 . In the *Visibility* area, select *<To All Users>*, so that all users can use this widget no matter what user role they are assigned.
