--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
@@ -21,7 +21,7 @@ The next time you generate a chargeback report, these values will be used.
 
 [NOTE]
 ======
-Note that when viewing chargeback, there is a rate for a virtual machine for the number of the CPUs.
+When viewing chargeback, there is a rate for a virtual machine for the number of the CPUs.
 The chargeback for this parameter is calculated based on when the virtual machine is running.
 If the virtual machine is not running, then it is not charged for CPU allocation.
 ======
