--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Accordions.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_manage_Report_Menu_Accordions.adoc
@@ -12,10 +12,8 @@
 * Click  image:images/2306.png[] *(Move selected Accordion to bottom)* to move the accordion to the bottom of the list.
 * Click  image:images/1861.png[] *(Delete selected Accordion and its contents)* to delete an accordion.
 * Click  image:images/1848.png[] *(Add folder to selected Accordion)* to add an accordion.
-  Note that if you are creating a new accordion, *Top Level* must have been selected under *Reports*.
-  Be sure to select the folder you want to create a subfolder for on the left pane.
-  To name the accordion, double-click on `New Folder`.
-  Click on *Top Level* in the *Reports* area.
++
+NOTE: If you are creating a new accordion, *Top Level* must be selected under *Reports*. Be sure to select the folder you want to create a subfolder for on the left pane. To name the accordion, double-click on *New Folder*, then click on *Top Level* in the *Reports* area.
 
 . When you are finished adding accordions, click  image:images/1863.png[] *(Commit folder management changes)*.
   To revert, click  image:images/1904.png[] *(Discard folder management changes)*.
